src/test/deca/context/invalid/resultats/test_void_param-cont.res
./src/test/deca/context/invalid/test_void_param.deca:10:10: Cannot declare a parameter of type void
